# mcp_gradio_client

./: .gitignore  LICENSE  README.md  config.json  example_config.json  gradio_ui.py  pyproject.toml  requirements.txt
cli/: __init__.py  cli.py
conversation_db/: conversations.db
docs/: Notes_on_config_json.md  pip_versus_uv.md  stdio_versus_sse_mcp_servers.md
mcp_client/: __init__.py  client.py  mcp_server_util.py
mcp_stdio_server_bats/: example.bat
