[project]
name = "mcp-gradio"
dynamic = ["version"]
description = "Gradio UI with MCP (Message Control Protocol) Client"
authors = [
    { name = "Joseph Ours" }
]
dependencies = [
    "gradio",
    "langchain",
    "langchain-openai",
    "langgraph",
    "mcp",  # Adjust version as needed
    "pydantic",
    "jsonschema-pydantic",
    "aiosqlite",
    "python-dotenv",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "copychat>=0.5.2",
    "ipython>=8.12.3",
    "pdbpp>=0.10.3",
    "pre-commit",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.5",
    "ruff",
]

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.hatch.version]
source = "vcs"